Stop horizontal scrolling

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ button {
 .app-container {
 	display: flex;
 	flex-direction: column;
+  width: 100vw;
   min-height: 200vh;
 }
 
